you can add expenses

--- a/src/app/expense-detail/expense-item/expense-item.component.html
+++ b/src/app/expense-detail/expense-item/expense-item.component.html
@@ -1,3 +1,20 @@
-<p>
-  expense-item works!
-</p>
+<div class="container content-box-blue">
+  <div class="col-xs-12">
+    <div class="panel panel-default ">
+      <div class="panel-heading">
+       Name 
+      </div>
+      <div class="panel-footer">
+        <label>{{expense.name}}</label>
+      </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+         qty 
+        </div>
+        <div class="panel-footer">
+          <label>{{expense.qty}}</label>
+        </div>
+      </div>
+  </div>
+</div>
