--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,15 @@
 </div>
 <div class="container">
   <div class="col-xs-12">
-   <app-expense-detail *ngIf="menuSelected === 'showExpense'"></app-expense-detail> 
+<app-expense-detail *ngIf="menuSelected === 'showExpense'" [(expensesElements)]="expenses"> 
+<!-- <app-expense-detail  [(expensesElements)]="expenses">--> 
+   </app-expense-detail> 
   </div>
 </div>
 <div class="container">
   <div class="col-xs-12">
-   <app-add-expense *ngIf="menuSelected === 'addExpense'"></app-add-expense> 
+<app-add-expense *ngIf="menuSelected === 'addExpense'" (expenseAdded)="expenseAdded($event)">
+<!-- <app-add-expense  (expenseAdded)="expenseAdded($event)">-->
+   </app-add-expense> 
   </div>
 </div>
