--- a/src/app/expense-detail/expense-detail.component.html
+++ b/src/app/expense-detail/expense-detail.component.html
@@ -1,4 +1,4 @@
 <p>
   expense-detail works!
 </p>
-<app-expense-item></app-expense-item>
+<app-expense-item *ngFor="let expenseEl of expensesElements" [expense]="expenseEl"></app-expense-item>
